--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -15,7 +15,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textSize="@dimen/title_text_size"
         android:textStyle="bold"
         tools:text="@string/auth_title" />
 
@@ -59,7 +58,7 @@
                     android:layout_height="50dp"
                     android:gravity="center"
                     android:text="TextView"
-                    android:textSize="14sp"
+                    android:textSize="24sp"
                     tools:text="@string/auth_camera_result" />
             </LinearLayout>
         </LinearLayout>
@@ -73,7 +72,7 @@
 
         <Button
             android:id="@+id/log_in_button"
-            style="?android:textAppearanceSmall"
+            style="?android:textAppearanceLarge"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/bottom_button_height"
             android:layout_gravity="center"
