--- a/app/src/main/res/layout/activity_engine.xml
+++ b/app/src/main/res/layout/activity_engine.xml
@@ -5,17 +5,13 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    >
 
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/engine_title"
-        android:textSize="@dimen/title_text_size"
         android:textStyle="bold" />
 
     <ScrollView
@@ -37,7 +33,7 @@
                 android:layout_height="300dp"
                 android:gravity="center_vertical"
                 android:text="@string/engine_start_info"
-                android:textSize="14sp" />
+                />
         </LinearLayout>
     </ScrollView>
 
@@ -50,10 +46,9 @@
         <Button
             android:id="@+id/log_in_button"
             style="?android:textAppearanceSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/bottom_button_height"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:layout_gravity="center"
-            android:background="@drawable/round_corner_btn"
             android:text="@string/action_next"
             android:textStyle="bold" />
     </LinearLayout>
