--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,13 @@
 <resources>
 
     <!-- Base application theme. -->
+    <!--
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+-->
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
@@ -17,4 +17,37 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <!-- Base application theme. -->
+
+    <style name="MyButtonStyle" parent="android:Widget.Button">
+        <!--
+        <item name="android:paddingTop">5pt</item>
+        <item name="android:paddingBottom">5pt</item>
+        <item name="android:paddingLeft">5pt</item>
+        <item name="android:paddingRight">5pt</item>
+        -->
+    </style>
+    <style name="MyEditTextStyle" parent="android:Widget.EditText">
+        <item name="android:textSize">40sp</item>
+        <item name="android:paddingTop">5pt</item>
+        <item name="android:paddingBottom">5pt</item>
+        <item name="android:paddingLeft">5pt</item>
+        <item name="android:paddingRight">5pt</item>
+    </style>
+    <style name="MyTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:textSize">16sp</item>
+        <item name="android:paddingTop">5pt</item>
+        <item name="android:paddingBottom">5pt</item>
+        <item name="android:paddingLeft">5pt</item>
+        <item name="android:paddingRight">5pt</item>
+    </style>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:buttonStyle">@style/MyButtonStyle</item>
+        <item name="editTextStyle">@style/MyEditTextStyle</item>
+        <item name="android:textViewStyle">@style/MyTextViewStyle</item>
+        <item name="android:textSize">24sp</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
 </resources>
