--- a/app/src/main/res/layout/activity_engine.xml
+++ b/app/src/main/res/layout/activity_engine.xml
@@ -48,7 +48,7 @@
         android:gravity="center_horizontal">
 
         <Button
-            android:id="@+id/log_in_button"
+            android:id="@+id/next_button"
             style="?android:textAppearanceSmall"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/bottom_button_height"
