--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -28,7 +28,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/day_call_button"
+                android:id="@+id/day_check_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="@dimen/menu_button_width"
                 android:layout_height="@dimen/menu_button_height"
@@ -36,7 +36,7 @@
                 android:layout_marginTop="30dp"
                 android:background="@drawable/round_corner_btn"
                 android:gravity="center"
-                android:text="@string/menu_day_call"
+                android:text="@string/menu_day_check"
                 android:textSize="@dimen/menu_button_text_size" />
 
             <TextView
