--- a/app/src/main/res/layout/activity_car.xml
+++ b/app/src/main/res/layout/activity_car.xml
@@ -90,10 +90,9 @@
         <Button
             android:id="@+id/next_button"
             style="?android:textAppearanceSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/bottom_button_height"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:layout_gravity="center"
-            android:background="@drawable/round_corner_btn"
             android:text="@string/action_next"
             android:textStyle="bold" />
     </LinearLayout>
