--- a/app/src/main/res/layout/activity_day_check_show.xml
+++ b/app/src/main/res/layout/activity_day_check_show.xml
@@ -113,14 +113,12 @@
 
         <Button
             android:id="@+id/menu_button"
-            style="?android:textAppearanceSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/bottom_button_height"
-            android:layout_gravity="center"
-            android:layout_marginLeft="15dp"
-            android:background="@drawable/round_corner_btn"
-            android:text="@string/action_menu"
-            android:textStyle="bold" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            android:text="@string/action_menu" />
+
     </LinearLayout>
 
 </LinearLayout>
