--- a/app/src/main/res/layout/activity_day_check_start.xml
+++ b/app/src/main/res/layout/activity_day_check_start.xml
@@ -29,15 +29,11 @@
             android:orientation="vertical">
             <Button
                 android:id="@+id/day_check_start_button"
-                style="?android:textAppearanceSmall"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="30dp"
-                android:background="@drawable/round_corner_btn"
-                android:text="@string/day_check_start_button"
-                android:textSize="20dp"
-                android:textStyle="bold" />
+                android:text="@string/day_check_start_button" />
         </LinearLayout>
     </ScrollView>
 
