--- a/app/src/main/res/layout/activity_health_status_reg.xml
+++ b/app/src/main/res/layout/activity_health_status_reg.xml
@@ -233,12 +233,11 @@
 
         <Button
             android:id="@+id/back_button"
-            style="?android:textAppearanceLarge"
+            style="?android:textAppearanceSmall"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/bottom_button_height"
+            android:layout_height="50dp"
             android:layout_gravity="left"
-            android:layout_marginRight="15dp"
-            android:background="@drawable/round_corner_btn"
+            android:layout_weight="1"
             android:text="@string/action_back"
             android:textStyle="bold" />
 
@@ -246,10 +245,9 @@
             android:id="@+id/next_button"
             style="?android:textAppearanceSmall"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/bottom_button_height"
+            android:layout_height="50dp"
             android:layout_gravity="right"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/round_corner_btn"
+            android:layout_weight="1"
             android:text="@string/action_next"
             android:textStyle="bold" />
     </LinearLayout>
