--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,10 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
->
+    android:orientation="vertical">
+
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
@@ -23,31 +22,28 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/day_call_button"
-                android:layout_marginTop="30dp"
+                android:id="@+id/day_check_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="@string/menu_day_call"
-                />
+                android:layout_marginTop="30dp"
+                android:text="@string/menu_day_check" />
 
             <Button
                 android:id="@+id/before_biz_call_button"
-                android:layout_marginTop="30dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="@string/menu_before_biz_call"
-                />
+                android:layout_marginTop="30dp"
+                android:text="@string/menu_before_biz_call" />
 
             <Button
                 android:id="@+id/after_biz_call_button"
-                android:layout_marginTop="30dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="@string/menu_after_biz_call"
-                />
+                android:layout_marginTop="30dp"
+                android:text="@string/menu_after_biz_call" />
         </LinearLayout>
     </ScrollView>
 
