--- a/app/src/main/res/layout/activity_visual_check.xml
+++ b/app/src/main/res/layout/activity_visual_check.xml
@@ -1,6 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -14,9 +12,9 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/visual_check_title"
         android:textSize="@dimen/title_text_size"
-        android:textStyle="bold"
-        android:text="@string/visual_check_title" />
+        android:textStyle="bold" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -49,28 +47,31 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentLeft="true"
                         android:orientation="vertical">
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:textSize="12sp"
                             android:text="@string/check_brake_pedal_title"
-                            android:textStyle="bold"/>
+                            android:textSize="12sp"
+                            android:textStyle="bold" />
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:textSize="12sp"
-                            android:text="@string/check_brake_pedal_info"/>
+                            android:text="@string/check_brake_pedal_info"
+                            android:textSize="12sp" />
                     </LinearLayout>
 
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="35dp"
                         android:layout_alignParentRight="true"
-                        android:textSize="10sp"
-                        android:text="@string/action_ok" />
+                        android:text="@string/action_ok"
+                        android:textSize="10sp" />
                 </RelativeLayout>
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
@@ -87,33 +88,37 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentLeft="true"
                         android:orientation="vertical">
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:textSize="12sp"
                             android:text="@string/check_park_title"
-                            android:textStyle="bold"/>
+                            android:textSize="12sp"
+                            android:textStyle="bold" />
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:textSize="12sp"
-                            android:text="@string/check_park_info"/>
+                            android:text="@string/check_park_info"
+                            android:textSize="12sp" />
                     </LinearLayout>
 
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="35dp"
                         android:layout_alignParentRight="true"
-                        android:textSize="10sp"
-                        android:text="@string/action_ok" />
+                        android:text="@string/action_ok"
+                        android:textSize="10sp" />
                 </RelativeLayout>
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_margin="10dp"
                     android:background="@android:color/black" />
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -124,33 +129,37 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentLeft="true"
                         android:orientation="vertical">
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:textSize="12sp"
                             android:text="@string/check_prime_mover_title"
-                            android:textStyle="bold"/>
+                            android:textSize="12sp"
+                            android:textStyle="bold" />
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:textSize="12sp"
-                            android:text="@string/check_prime_mover_info"/>
+                            android:text="@string/check_prime_mover_info"
+                            android:textSize="12sp" />
                     </LinearLayout>
 
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="35dp"
                         android:layout_alignParentRight="true"
-                        android:textSize="10sp"
-                        android:text="@string/action_ok" />
+                        android:text="@string/action_ok"
+                        android:textSize="10sp" />
                 </RelativeLayout>
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_margin="10dp"
                     android:background="@android:color/black" />
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -161,33 +170,37 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentLeft="true"
                         android:orientation="vertical">
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:textSize="12sp"
                             android:text="@string/check_prime_mover_speed_title"
-                            android:textStyle="bold"/>
+                            android:textSize="12sp"
+                            android:textStyle="bold" />
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:textSize="12sp"
-                            android:text="@string/check_prime_mover_speed_info"/>
+                            android:text="@string/check_prime_mover_speed_info"
+                            android:textSize="12sp" />
                     </LinearLayout>
 
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="35dp"
                         android:layout_alignParentRight="true"
-                        android:textSize="10sp"
-                        android:text="@string/action_ok" />
+                        android:text="@string/action_ok"
+                        android:textSize="10sp" />
                 </RelativeLayout>
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_margin="10dp"
                     android:background="@android:color/black" />
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -198,33 +211,37 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentLeft="true"
                         android:orientation="vertical">
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:textSize="12sp"
                             android:text="@string/check_window_washer_title"
-                            android:textStyle="bold"/>
+                            android:textSize="12sp"
+                            android:textStyle="bold" />
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:textSize="12sp"
-                            android:text="@string/check_window_washer_info"/>
+                            android:text="@string/check_window_washer_info"
+                            android:textSize="12sp" />
                     </LinearLayout>
 
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="35dp"
                         android:layout_alignParentRight="true"
-                        android:textSize="10sp"
-                        android:text="@string/action_ok" />
+                        android:text="@string/action_ok"
+                        android:textSize="10sp" />
                 </RelativeLayout>
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_margin="10dp"
                     android:background="@android:color/black" />
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -235,44 +252,47 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentLeft="true"
                         android:orientation="vertical">
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:textSize="12sp"
                             android:text="@string/check_wiper_title"
-                            android:textStyle="bold"/>
+                            android:textSize="12sp"
+                            android:textStyle="bold" />
+
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
-                            android:textSize="12sp"
-                            android:text="@string/check_wiper_info"/>
+                            android:text="@string/check_wiper_info"
+                            android:textSize="12sp" />
                     </LinearLayout>
 
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="35dp"
                         android:layout_alignParentRight="true"
-                        android:textSize="10sp"
-                        android:text="@string/action_ng" />
+                        android:text="@string/action_ng"
+                        android:textSize="10sp" />
                 </RelativeLayout>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:gravity="center_horizontal">
+
         <Button
             android:id="@+id/back_button"
             style="?android:textAppearanceSmall"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/bottom_button_height"
+            android:layout_height="50dp"
             android:layout_gravity="left"
-            android:layout_marginRight="15dp"
-            android:background="@drawable/round_corner_btn"
+            android:layout_weight="1"
             android:text="@string/action_back"
             android:textStyle="bold" />
 
@@ -280,10 +300,9 @@
             android:id="@+id/next_button"
             style="?android:textAppearanceSmall"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/bottom_button_height"
+            android:layout_height="50dp"
             android:layout_gravity="right"
-            android:layout_marginLeft="15dp"
-            android:background="@drawable/round_corner_btn"
+            android:layout_weight="1"
             android:text="@string/action_next"
             android:textStyle="bold" />
     </LinearLayout>
